--- a/sections/main-collection-banner.liquid
+++ b/sections/main-collection-banner.liquid
@@ -18,7 +18,13 @@
       </h1>
 
       {%- if section.settings.show_collection_description -%}
-        <div class="collection-hero__description rte">{{ collection.description }}</div>
+        <div id="collection-hero-{{ section.id }}" class="collection-hero__description rte">
+          {{ collection.description }}
+
+          <div class="collection-hero__description__expand" id="collection-read-more-{{ section.id }}">
+            <button class="button button--secondary">Leggi di più...</button>
+          </div>
+        </div>
       {%- endif -%}
     </div>
 
@@ -44,6 +50,57 @@
     {%- endif -%}
   </div>
 </div>
+
+{%- style -%}
+  .collection-hero__description.to-expand {
+    max-height: 300px;
+    
+  }
+
+  .collection-hero__description.to-expand .collection-hero__description__expand {
+    opacity: 1;
+  }
+  
+  .collection-hero__description {
+    max-height: none;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .collection-hero__description__expand {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    padding-bottom: 1em;
+    width: 100%;
+    height: 9em;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    background: linear-gradient(to top, #ffffff, transparent);
+    opacity: 0;
+  }
+
+  .collection-hero__description__expand button {
+  }
+{%- endstyle -%}
+
+<script>
+  const collectionHeroEl = document.querySelector("#collection-hero-{{ section.id }}");
+  const collectionReadMoreEl = document.querySelector("#collection-read-more-{{ section.id }}");
+
+  if (collectionHeroEl && collectionReadMoreEl) {
+    const collectionHeroHeight = collectionHeroEl.getBoundingClientRect().height;
+
+    if (collectionHeroHeight > 300) {
+      collectionHeroEl.classList.add('to-expand');
+    }
+    
+    collectionReadMoreEl.addEventListener('click', function() {
+      collectionHeroEl.classList.remove('to-expand');
+    });
+  }
+</script>
 
 {% schema %}
 {
