--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -89,6 +89,12 @@
             {%- case block.type -%}
               {%- when '@app' -%}
                 {% render block %}
+              {%- when 'variant_sku' -%} 
+                <div id="sku-{{ section.id }}" {{ block.shopify_attributes }} style="margin-top: -15px;"> 
+                  {% if product.selected_or_first_available_variant.sku != blank %}
+                    <p id="product-sku">{{ product.selected_or_first_available_variant.sku }} </p>
+                  {% endif %}
+                </div>
               {%- when 'text' -%}
                 <p
                   class="product__text inline-richtext{% if block.settings.text_style == 'uppercase' %} caption-with-letter-spacing{% elsif block.settings.text_style == 'subtitle' %} subtitle{% endif %}"
@@ -732,6 +738,12 @@
   "blocks": [
     {
       "type": "@app"
+    },
+    // Custom Variant SKU block.
+    {
+      "type": "variant_sku",
+      "name": "⚡️ Variant SKU",
+      "limit": 1
     },
     {
       "type": "text",
