Remove redundant `h2` pt.1 (#1)
* Remove `h2` from cart

* Remove `h2` from country label

* Remove `h2` from `sort_by_label`

* Remove more `h2`s

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -262,7 +262,7 @@
           <localization-form>
             {%- form 'localization', id: 'FooterCountryForm', class: 'localization-form' -%}
               <div>
-                <h2 class="caption-large text-body" id="FooterCountryLabel">{{ 'localization.country_label' | t }}</h2>
+                <span class="caption-large text-body" id="FooterCountryLabel">{{ 'localization.country_label' | t }}</span>
                 {%- render 'country-localization', localPosition: 'FooterCountry' -%}
               </div>
             {%- endform -%}
