--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -206,7 +206,7 @@
           <localization-form class="small-hide medium-hide" data-prevent-hide>
             {%- form 'localization', id: 'HeaderCountryForm', class: 'localization-form' -%}
               <div>
-                <h2 class="visually-hidden" id="HeaderCountryLabel">{{ 'localization.country_label' | t }}</h2>
+                <span class="visually-hidden" id="HeaderCountryLabel">{{ 'localization.country_label' | t }}</span>
                 {%- render 'country-localization', localPosition: 'HeaderCountry' -%}
               </div>
             {%- endform -%}
