--- a/sections/predictive-search.liquid
+++ b/sections/predictive-search.liquid
@@ -117,12 +117,12 @@
       <div class="predictive-search__result-group">
         {%- if predictive_search.resources.products.size > 0 -%}
           <div>
-            <h2
+            <span
               id="predictive-search-products"
               class="predictive-search__heading text-body caption-with-letter-spacing"
             >
               {{- 'templates.search.products' | t -}}
-            </h2>
+            </span>
             <ul
               id="predictive-search-results-products-list"
               class="predictive-search__results-list list-unstyled"
