--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -31,7 +31,7 @@
         <div class="drawer__inner-empty">
           <div class="cart-drawer__warnings center{% if settings.cart_drawer_collection != blank %} cart-drawer__warnings--has-collection{% endif %}">
             <div class="cart-drawer__empty-content">
-              <h2 class="cart__empty-text">{{ 'sections.cart.empty' | t }}</h2>
+              <span class="cart__empty-text">{{ 'sections.cart.empty' | t }}</span>
               <button
                 class="drawer__close"
                 type="button"
@@ -62,7 +62,7 @@
         </div>
       {%- endif -%}
       <div class="drawer__header">
-        <h2 class="drawer__heading">{{ 'sections.cart.title' | t }}</h2>
+        <span class="drawer__heading">{{ 'sections.cart.title' | t }}</span>
         <button
           class="drawer__close"
           type="button"
@@ -494,7 +494,7 @@
           </div>
 
           <div class="totals" role="status">
-            <h2 class="totals__total">{{ 'sections.cart.estimated_total' | t }}</h2>
+            <span class="totals__total">{{ 'sections.cart.estimated_total' | t }}</span>
             <p class="totals__total-value">{{ cart.total_price | money_with_currency }}</p>
           </div>
 
