--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -143,7 +143,7 @@
         <localization-form class="small-hide medium-hide">
           {%- form 'localization', id: 'AnnouncementCountryForm', class: 'localization-form' -%}
             <div>
-              <h2 class="visually-hidden" id="AnnouncementCountryLabel">{{ 'localization.country_label' | t }}</h2>
+              <span class="visually-hidden" id="AnnouncementCountryLabel">{{ 'localization.country_label' | t }}</span>
               {%- render 'country-localization', localPosition: 'AnnouncementCountry' -%}
             </div>
           {%- endform -%}
@@ -154,7 +154,7 @@
         <localization-form class="small-hide medium-hide">
           {%- form 'localization', id: 'AnnouncementLanguageForm', class: 'localization-form' -%}
             <div>
-              <h2 class="visually-hidden" id="AnnouncementLanguageLabel">{{ 'localization.language_label' | t }}</h2>
+              <span class="visually-hidden" id="AnnouncementLanguageLabel">{{ 'localization.language_label' | t }}</span>
               {%- render 'language-localization', localPosition: 'AnnouncementLanguage' -%}
             </div>
           {%- endform -%}
