--- a/sections/main-cart-footer.liquid
+++ b/sections/main-cart-footer.liquid
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="totals">
-                  <h2 class="totals__total">{{ 'sections.cart.estimated_total' | t }}</h2>
+                  <span class="totals__total">{{ 'sections.cart.estimated_total' | t }}</span>
                   <p class="totals__total-value">{{ cart.total_price | money_with_currency }}</p>
                 </div>
 
